rename videochat as CatalystChat, update readme, attempt to fix chat css on safari

--- a/src/styles/catalyst.css
+++ b/src/styles/catalyst.css
@@ -523,8 +523,10 @@ a {
   max-height: 27%;
   min-height: 25%;
   font-family: "Heebo", sans-serif;
+  width: 90%;
   position: fixed;
   bottom: 0;
+  right: 10%;
   z-index: 10;
   padding: 10px;
   box-sizing: border-box;
